# pdfkit-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_document_smoke.rs  02_page_basics.rs  03_annotation_link.rs  04_outline_tree.rs  05_selection_ranges.rs  06_view_state.rs  07_thumbnail_view_state.rs  08_action_url.rs  09_action_goto.rs  10_border_style.rs  11_destination_compare.rs  12_appearance_characteristics.rs  13_accessibility_node_status.rs  14_action_named_remote_goto.rs  15_document_delegate_write_options.rs  16_async_find_stream.rs
examples/common/: mod.rs
src/: accessibility_node.rs  action.rs  action_goto.rs  action_named.rs  action_remote_goto.rs  action_reset_form.rs  action_url.rs  annotation.rs  annotation_constants.rs  appearance_characteristics.rs  async_api.rs  border.rs  destination.rs  document.rs  document_delegate.rs  error.rs  ffi.rs  handle.rs  lib.rs  notifications.rs  outline.rs  page.rs  page_overlay_view.rs  page_overlay_view_provider.rs  selection.rs  thumbnail_view.rs  types.rs  util.rs  view.rs  view_delegate.rs
src/ffi/: accessibility_node.rs  action.rs  action_goto.rs  action_named.rs  action_remote_goto.rs  action_reset_form.rs  action_url.rs  annotation.rs  appearance_characteristics.rs  border.rs  core.rs  destination.rs  document.rs  document_delegate.rs  mod.rs  outline.rs  page.rs  page_overlay_view.rs  selection.rs  view.rs  (+3 more)
swift-bridge/: Package.swift
tests/: accessibility_node_tests.rs  action_goto_tests.rs  action_named_remote_tests.rs  action_url_tests.rs  additional_surface_tests.rs  annotation_tests.rs  api_coverage.rs  appearance_characteristics_tests.rs  async_find_stream_tests.rs  border_tests.rs  destination_tests.rs  document_delegate_tests.rs  document_notifications_options_tests.rs  document_tests.rs  outline_tests.rs  page_tests.rs  selection_tests.rs  thumbnail_view_tests.rs  view_tests.rs
(+24 files in other folders)
