[package]
name = "pdfkit-rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/pdfkit-rs"
repository = "https://github.com/doom-fish/pdfkit-rs"
description = "Safe Rust bindings for Apple's PDFKit framework — documents, pages, selections, outlines, annotations, destinations, actions, and view state on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["pdf", "pdfkit", "macos", "apple", "document"]
categories = ["api-bindings", "graphics", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[features]
default = []
async = ["dep:doom-fish-utils"]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "pdfkit"
crate-type = ["lib"]

[dependencies]
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.4", optional = true, features = ["futures-stream"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pollster = "0.3"
regex-lite = "0.1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_document_smoke"

[[example]]
name = "16_async_find_stream"
required-features = ["async"]

[[test]]
name = "async_find_stream_tests"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
